[package]
name = "mieza"
version = "0.1.0"
edition = "2021"
description = "Modern circuit description language and rendering library"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pest = "2.0"
pest_derive = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
libc = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "console_error_panic_hook"]